syntax = "proto3";
package bze.burner.v1;

option go_package = "github.com/bze-alphateam/bze/x/burner/types";

message CoinsBurnedEvent {
  string burned = 1;
}

message FundBurnerEvent {
  string from = 1;
  string amount = 2;
}

message RaffleWinnerEvent {
  string denom = 1;
  string winner = 2;
  string amount = 3;
}

message RaffleLostEvent {
  string denom = 1;
  string participant = 2;
}

message RaffleFinishedEvent {
  string denom = 1;
}