syntax = "proto3";
package bze.burner.v1;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/bze-alphateam/bze/x/burner/types";

// Msg defines the Msg service.
service Msg {
      rpc FundBurner(MsgFundBurner) returns (MsgFundBurnerResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgFundBurner {
  string creator = 1;
  string amount = 2;
}

message MsgFundBurnerResponse {
}

// this line is used by starport scaffolding # proto/tx/message